[Fuchsia] Fix FuchsiaVideoDecoder to call DecodeCB asynchronously.

FuchsiaVideoDecoder was calling DecodeCB synchronously in Decode().
DecoderStream doesn't expect this, so it was failing a DCHECK.

Bug: 909018
Change-Id: Ibf445447b3875ae76ff5d69a5ba9af174836a21b
Reviewed-on: https://chromium-review.googlesource.com/c/1351647
Reviewed-by: Dan Sanders <sandersd@chromium.org>
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612461}
Former-commit-id: 49acd6a57f295efdfbf9cb81b6bbf5b4ee04a765